--- a/resources/console_help/help.htm
+++ b/resources/console_help/help.htm
@@ -5,7 +5,6 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	<!--<script type="text/javascript" src="js/jquery-1.8.2.min.js"></script>
 	<script type="text/javascript" src="js/jquery.i18n.min.js"></script>-->
-	
 	<style>
 		body{
     		font-family: verdana,arial,helvetica,sans-serif;
@@ -22,11 +21,11 @@
 		}
 	</style>
 </head>
-<body>
+<body onload="addPath()">
 	<table id="header">
 		<tr>
 		<td>
-			<img src="../iconConsole/imgHelpDialog.png" />
+			<img id="theimg" src="img/imgHelpDialog.png" />
 		</td>
 		<td>
 			<h2 id="headerTitle">Python Console for QGIS</h2>
@@ -87,35 +86,35 @@
 	<p><span id="toolbarTitle">The following is a description of the tools in the toolbar:</span></p>		
 	<table width="100%" border="0" id="headerTool">
 		<tr>
-			<td><img src="../iconConsole/iconClearConsole.png" /></td>
+			<td><img src="img/iconClearConsole.png" /></td>
 			<td colspan="2"><span id="toolbarClear">Tool to clear python console</span></td>
 		</tr>
 		<tr>
-			<td><img src="../iconConsole/iconClassConsole.png" /></td>
-			<td><img src="../iconConsole/iconIfaceConsole.png" /></td>
+			<td><img src="img/iconClassConsole.png" /></td>
+			<td><img src="img/iconIfaceConsole.png" /></td>
 			<td><span id="toolbarIfaceClass">Tool to import iface class</span></td>
 		</tr>
 		<tr>
 			<td></td>
-			<td><img src="../iconConsole/iconSextanteConsole.png" /></td>
+			<td><img src="img/iconSextanteConsole.png" /></td>
 			<td><span id="toolbarSextClass">Tool to import Sextante class</span></td>
 		</tr>
 		<tr>
-			<td><img src="../iconConsole/iconScriptConsole.png" /></td>
-			<td><img src="../iconConsole/iconOpenConsole.png" /></td>
+			<td><img src="img/iconScriptConsole.png" /></td>
+			<td><img src="img/iconOpenConsole.png" /></td>
 			<td><span id="toolbarScriptOpen">Tool to open a python script and load in console</span></td>
 		</tr>
 		<tr>
 			<td></td>
-			<td><img src="../iconConsole/iconSaveConsole.png" /></td>
+			<td><img src="img/iconSaveConsole.png" /></td>
 			<td><span id="toolbarScriptSave">Tool to save a python script</span></td>
 		</tr>
 		<tr>
-			<td><img src="../iconConsole/iconHelpConsole.png" /></td>
+			<td><img src="img/iconHelpConsole.png" /></td>
 			<td colspan="2"><span id="toolbarHelp">Help</span></td>
 		</tr>
 		<tr>
-			<td><img src="../iconConsole/iconRunConsole.png" /></td>
+			<td><img src="img/iconRunConsole.png" /></td>
 			<td colspan="2"><span id="toolbarRun">Run command (like Enter key pressed)</span></td>
 		</tr>
 	</table>
